# PWr-Aizo2

./: CMakeLists.txt  main.cpp
bestWay/djikstra/incidentMatrix/: DjikstraIncidentMatrix.cpp  DjikstraIncidentMatrix.h
bestWay/djikstra/neighboorList/: DjikstraNeighborList.cpp
bestWay/djikstra/neighborList/: DjikstraNeighborList.cpp  DjikstraNeighborList.h
bestWay/ford-bellman/incidentMatrix/: BellmanFordIncidentMatrix.cpp  BellmanFordIncidentMatrix.h
bestWay/ford-bellman/neighborList/: BellmanFordNeighborList.cpp  BellmanFordNeighborList.h
data/dataFiles/: input1.txt  input2.txt  output.txt  test.txt
data/generator/: Generator.cpp  Generator.h
data/generator/edge/: Edge.cpp  Edge.h
graf/incidentMatrix/: IncidentMatrixGraf.cpp  IncidentMatrixGraf.h
graf/matrix/: MatrixGraf.cpp  MatrixGraf.h
graf/neighborhoodList/: NeighborhoodList.cpp  NeighborhoodList.h
graf/neighborhoodList/Node/: Node.cpp  Node.h
graf/neighbours/: Neighbour.cpp  Neighbour.h
graf/neighbours/Node/: Node.h
graf/neighbours/mst/: MSTNeighbours.cpp  MSTNeighbours.h
gui/: GUI.cpp  GUI.h
mst/kruskal/incidentMatrix/: KruskalIncidentMatrix.cpp  KruskalIncidentMatrix.h
mst/kruskal/kruskal/: Kruskal.cpp  Kruskal.h
mst/kruskal/neighborhoodList/: KruskalNeighborhoodMatrix.cpp  KruskalNeighborhoodMatrix.h
mst/kruskal/unionFind/: UnionFind.cpp  UnionFind.h
mst/matrix/: MST_Matrix.cpp  MST_Matrix.h
mst/prim/incidentMatrix/: MstIncidentMatrixPrimAlgorithm.cpp  MstIncidentMatrixPrimAlgorithm.h
mst/prim/neighborhoodList/: MstNeighborhoodListPrimAlgorithm.cpp  MstNeighborhoodListPrimAlgorithm.h
objects/: wektor.cpp
time_tester/: TestEverything.cpp  TestEverything.h
